reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__scheduler.rs_line_2156_col_9.log

*** crates/tracewake-core/src/scheduler.rs:2156:9: replace no_human::advance_no_human -> NoHumanAdvanceReport with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/scheduler.rs
+++ replace no_human::advance_no_human -> NoHumanAdvanceReport with Default::default()
@@ -2148,133 +2148,17 @@
         state: NoHumanStateMut<'_>,
         log: &mut EventLog,
         registry: &ActionRegistry,
         content_manifest_id: ContentManifestId,
         start_tick: SimTick,
         tick_count: u64,
         scheduled_proposals: Vec<Proposal>,
     ) -> NoHumanAdvanceReport {
-        let physical_state = state.physical;
-        let agent_state = state.agent;
-        let process_id = ProcessId::new("no_human_advance").unwrap();
-        let mut scheduler = DeterministicScheduler::new(start_tick);
-        let started = append_marker(
-            log,
-            EventKind::NoHumanAdvanceStarted,
-            &process_id,
-            scheduler.current_tick,
-            0,
-            tick_count,
-            content_manifest_id.clone(),
-        );
-
-        let mut ordinary_pipeline_events = 0;
-        let mut pending_sleep_starts = Vec::new();
-        let mut pending_work_starts = Vec::new();
-        let mut scheduler_errors = Vec::new();
-        let mut sorted = scheduled_proposals
-            .into_iter()
-            .map(|proposal| {
-                let key = OrderingKey::new(
-                    proposal.requested_tick,
-                    SchedulePhase::NoHumanProcess,
-                    SchedulerSourceId::Process(process_id.clone()),
-                    scheduler.assign_proposal_sequence(),
-                    proposal.action_id.clone(),
-                    proposal.target_ids.clone(),
-                    proposal.proposal_id.as_str().to_string(),
-                );
-                (key, proposal)
-            })
-            .collect::<Vec<_>>();
-        sorted.sort_by(|left, right| left.0.cmp(&right.0));
-
-        for (ordering_key, proposal) in sorted {
-            for expected_tick in
-                scheduler.current_tick.value().saturating_add(1)..=proposal.requested_tick.value()
-            {
-                let due_tick = scheduler.advance_one_tick();
-                debug_assert_eq!(due_tick, SimTick::new(expected_tick));
-                append_due_completions(
-                    physical_state,
-                    log,
-                    agent_state,
-                    &process_id,
-                    &mut scheduler,
-                    &content_manifest_id,
-                    &mut pending_sleep_starts,
-                    &mut pending_work_starts,
-                    due_tick,
-                    &mut scheduler_errors,
-                );
-            }
-            let mut context = PipelineContext {
-                registry,
-                state: physical_state,
-                agent_state,
-                log,
-                controller_bindings: None,
-                epistemic_projection: None,
-                content_manifest_id: content_manifest_id.clone(),
-                ordering_key,
-            };
-            let result = run_pipeline(&mut context, &proposal);
-            pending_sleep_starts.extend(
-                result
-                    .appended_events
-                    .iter()
-                    .filter(|event| event.event_type == EventKind::SleepStarted)
-                    .cloned(),
-            );
-            pending_work_starts.extend(
-                result
-                    .appended_events
-                    .iter()
-                    .filter(|event| event.event_type == EventKind::WorkBlockStarted)
-                    .cloned(),
-            );
-            ordinary_pipeline_events += no_human_progress_event_count(&result.appended_events);
-        }
-
-        let final_tick = start_tick.advance_by(tick_count);
-        for expected_tick in scheduler.current_tick.value().saturating_add(1)..=final_tick.value() {
-            let due_tick = scheduler.advance_one_tick();
-            debug_assert_eq!(due_tick, SimTick::new(expected_tick));
-            append_due_completions(
-                physical_state,
-                log,
-                agent_state,
-                &process_id,
-                &mut scheduler,
-                &content_manifest_id,
-                &mut pending_sleep_starts,
-                &mut pending_work_starts,
-                due_tick,
-                &mut scheduler_errors,
-            );
-        }
-
-        let completed = append_marker(
-            log,
-            EventKind::NoHumanAdvanceCompleted,
-            &process_id,
-            scheduler.current_tick,
-            1,
-            tick_count,
-            content_manifest_id,
-        );
-
-        NoHumanAdvanceReport {
-            start_tick,
-            final_tick: scheduler.current_tick,
-            tick_count,
-            marker_event_ids: vec![started.event_id, completed.event_id],
-            ordinary_pipeline_events,
-        }
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     fn no_human_progress_event_count(events: &[EventEnvelope]) -> usize {
         events
             .iter()
             .filter(|event| is_no_human_progress_event(event))
             .count()
     }


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/scheduler.rs` has changed (1781905453.647925131s, 3s after last build at 1781905450.291925066s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `NoHumanAdvanceReport: Default` is not satisfied
    --> crates/tracewake-core/src/scheduler.rs:2156:9
     |
2156 |         Default::default() /* ~ changed by cargo-mutants ~ */
     |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `NoHumanAdvanceReport`
     |
help: consider annotating `NoHumanAdvanceReport` with `#[derive(Default)]`
     |
 254 +     #[derive(Default)]
 255 |     pub struct NoHumanAdvanceReport {
     |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
